CCMSPUI-358 | refactor to add date utils